<resources>
    <string name="app_name">driveit</string>
    <string name="log_in">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="content_desc_add_cash">Add cash</string>
    <string name="amount_placeholder">KES 2,450</string>
    <string name="car_model_placeholder">Civic Type R 2019</string>
    <string name="car_name_placeholder">Honda</string>
    <string name="my_garage">My Garage</string>
    <string name="available_cars">Available Cars</string>
    <string name="durations">Long term, Short term</string>
    <string name="top_deals">Top Deals</string>
    <string name="more">More</string>
    <string name="content_desc_go_back">Go back</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="monthly">monthly</string>
    <string name="per_week">Per week</string>
    <string name="fire_login">Fire Login</string>
    <string name="best_match">Best Match</string>
    <string name="highest_price">Highest Price</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="num_amount">2,450</string>
    <string name="currency_format">KES %1$s</string>
    <string name="currency">KES</string>
    <string name="hello_john">Hello, John</string>
</resources>